--- a/project1/styles.css
+++ b/project1/styles.css
@@ -1,35 +1,56 @@
 @font-face {
     font-family: headerFont;
-    src: url(BebasNeue-Regular.ttf);
+    src: url(src/BebasNeue-Regular.ttf);
 }
 @font-face {
     font-family: otherFont;
-    src: url(RobotoSlab-VariableFont_wght.ttf);
+    src: url(src/RobotoSlab-VariableFont_wght.ttf);
 }
 html{
     color:rgb(0, 34, 73);
     margin: 0 auto;
     max-width: 1200px;
-    min-width: 1200px;
+    min-width: 500px;
     min-height: 1800px;
     padding: 1em;
     font-family: otherFont;
+    font-size: 14px;
+    margin-top: 0px;
 }
+
+@media screen and (min-width: 1000px){
+    a:link{
+        color: orange;
+    }
+    a:visited{
+        color: darkblue;
+    }
+    a:focus{
+        color: coral;
+    }
+    a:hover{
+        color: coral;
+    }
+    a:active{
+        color: blue;
+    }
+    
 header{
     background-color: rgb(0, 34, 73);
+    padding-bottom: 45px;
 }
 header h1{
     font-family: headerFont;
-    
-    
+    margin-top: 0px; 
 }
-header h1 #Market {
-    float:left;
+header #market {
+    float: left;
     color: rgb(255, 208, 0);
     font-size: 8em;
+    padding-left: 10px;
     z-index: 2;
 }
-header h1 #Money {
+header #money{
     float: right;
     color:rgb(0, 184, 240);
     font-size:7em;
@@ -42,41 +63,49 @@ header h1 #and {
     color:white;
     font-size: 12em;
     z-index: 1;
+    margin-bottom: 0;
+    
 }
-
 header p{
     color:white;
     background-color: rgb(0, 34, 73);
     font-size: medium;
     max-width: 550px;
-    position: relative;
-    
-    bottom: 300px;
+    position: absolute;
+    padding-left: 4em;
+    bottom: 58%;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
+
 #retire{
-    display: float;
+
     grid-area: retire;
-
-
+    padding-bottom: 0;
+    
 }
 #retire h3{
     font-size: 3em;
+    margin: 0 0;
 }
 #retire #p2{
     color: rgb(0, 184, 240);
+    padding-bottom: 0em;
+    margin-bottom: 0px;
 }
+
 #bluebox{
     display: float;
     background-color: rgb(0, 184, 240, 0.8);
     grid-area: bluebox;
-    
+    padding: 15px
 
 }
 #bluebox h2{
     color:white;
     font-size: 5em;
+    margin: 0 0;
 }
-
 #bluebox h6{
     color:rgb(0, 34, 73);
     font-size: medium;
@@ -88,41 +117,175 @@ header p{
 
 #bigm {
     grid-area: bigm;
-
+    padding: 10px;
 
 }
-
 #bigm #them{
-    float:left;
     font-size: 7em;
     color: rgb(0, 184, 240);
+    margin: 0 0;
+    float: left;
 }
-
+#bigm p{
+    clear:left;
+}
 #bigm2 {
     display: float;
     grid-area: bigm2;
-
+    padding: 10px;
 
 }
 
 img #swimmer{
-
     z-index: -10;
-    float:left;
+    position:absolute;
+    float: right;
+    max-width: 20%;
+    max-height: auto;
 }
 
 main{
+    position:relative;
+    top:50px;
+    margin: 0 0;
     display:grid;
-    height:100vh;
-    float:right;
-    grid-template-columns: 7fr 3fr 1fr 3fr;
-    grid-template-rows: 7fr 1fr 7fr; 
+    clear: left;
+    /* grid-template-columns: 700px 300px 100px 300px; */
+    grid-template-columns: 400px 300px 100px 300px;
+    grid-template-rows: 500px 100px 700px; 
     grid-template-areas: ". . retire retire"
                         "bluebox . retire retire "
-                        "bluebox bigm . bigm2";
+                        "bluebox bigm bigm bigm2";
     position:relative;
     bottom: 600px;
-    right:75px;
+}
+
+}
+
+@media screen and (max-width: 1000px){
+    a:link{
+        color: orange;
+    }
+    a:visited{
+        color: darkblue;
+    }
+    a:focus{
+        color: coral;
+    }
+    a:hover{
+        color: coral;
+    }
+    a:active{
+        color: blue;
+    }
+
+    header{
+        background-color: rgb(0, 34, 73);
+        padding: 10;
+    }
+    header h1{
+        font-family: headerFont;
+        margin-top: 0px;  
+        background-color: rgb(0, 34, 73);
+    }  
+    header h1 #market {
+        color: rgb(255, 208, 0);
+        background-color: rgb(0, 34, 73);
+        font-size: 8em;
+        padding-left: 10px;
+    }
+    header h1 #money {
+        color:rgb(0, 184, 240);
+        font-size:7em;
+    }
+    header h1 #and {
+        color:white;
+        font-size: 11em;
+        z-index: 1;
+        margin-bottom: 0;
+        position: absolute;
+        top: 115px; 
+        left:50px; 
+    }
+    header p{
+        color:white;
+        background-color: rgb(0, 34, 73);
+        font-size: medium;
+        padding-left: 10px;
+        padding-bottom: 10px;
+
+    }
+
+
+    #retire{
+        grid-area: retire;
+        padding-bottom: 0;     
+    }
+    #retire h3{
+        font-size: 3em;
+        margin: 0 0;
+    }
+    #retire #p2{
+        color: rgb(0, 184, 240);
+        padding-bottom: 0em;
+        margin-bottom: 0px;
+    }
+    
+
+    #bluebox{
+        display: float;
+        background-color: rgb(0, 184, 240, 0.8);
+        padding: 15px
+    }
+    #bluebox h2{
+        color:white;
+        font-size: 5em;
+        margin: 0 0;
+    }
+    #bluebox h6{
+        color:rgb(0, 34, 73);
+        font-size: medium;
+    }
+    #bluebox p{
+        color: white;
+        font-size: small;
+    }
+
+
+    #bigm {
+        grid-area: bigm;
+        padding: 10px;
+    }
+    #bigm #them{
+        font-size: 7em;
+        color: rgb(0, 184, 240);
+        margin: 0 0;
+        float: left;
+    }   
+    #bigm p{
+        clear: left;
+    }
+    #bigm2 {
+        display: float;
+        grid-area: bigm2;
+        padding: 10px;
+    }
+
+
+    main{
+        position:relative;
+        top:50px;
+    }
+
+
+    img #swimmer{
+        z-index: -10;
+        position:relative;
+        float:left;
+        left: 275px;
+        max-width: 100%;
+        max-height: auto;
+    }
 }
 
 
