--- a/gif-finder/styles/main.css
+++ b/gif-finder/styles/main.css
@@ -17,12 +17,15 @@
  
  #status{
      font-style: italic;
-     height:32px;
  }
 
  .result {
     display:flex;
     flex-direction: column;
+ }
+
+ .result img{
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
  }
 
  .result span{
@@ -36,6 +39,7 @@
     width: 90%;
     margin: 0 auto;
  }
+
 
  /*
  .result {
