big catch up between on campus and home

--- a/project_2/main.css
+++ b/project_2/main.css
@@ -54,8 +54,7 @@ input {
     font-size: medium;
 }
 
-#withRick{
-    background-color: chartreuse;
+.withRick{
     font-weight: bolder;
     font-size: medium;
 }
